hphp/test/zend/bad/Zend/tests/generators/errors/yield_const_by_ref_error.php
<?php

function &gen() {
    yield "foo";
}

$gen = gen();
var_dump($gen->current());

?>